# poetry-private-source-plugin

./: README.md  pyproject.toml
poetry_private_source_plugin/: parsers.py  plugin.py
tests/: test_parsers.py
