[tool.poetry]
name = "poetry-private-source-plugin"
version = "0.1.0"
description = "Poetry plugin to simplify operations when using private sources."
authors = ["Roberto Alamos <ralamosm@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_private_source_plugin"}]
homepage = "https://github.com/ralamosm/poetry-private-source-plugin"
repository = "https://github.com/ralamosm/poetry-private-source-plugin"
keywords = ["poetry", "poetry-plugin", "plugin", "codeartifact"]
classifiers = [
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.28.17"
poetry = "^1.7.0"
furl = "^2.1.3"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"


[tool.poetry.plugins."poetry.application.plugin"]
private_source = "poetry_private_source_plugin.plugin:PrivateSourcePlugin"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
